[metadata]
name = workflow-api
version = 0.1b
description = Workflow Management API (Reference App)
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_files = LICENSE
author = Jason Klueber
author_email = jason.klueber@gmail.com
# url = 
# project_urls =
#     Source = 
# keywords = 
# classifiers =
#     Development Status :: 4 - Beta
#     Environment :: Console
#     Intended Audience :: Developers
#     License :: OSI Approved :: MIT License
#     Natural Language :: English
#     Operating System :: OS Independent
#     Programming Language :: Python :: 3.9
#     Topic :: Software Development

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.11.4, <4
install_requires =
    
[options.packages.find]
where = src

[options.extras_require]
test =
    pytest

# [options.entry_points]
# consoie_scripts =
#     pyproj = pyproj.__main__:main
